crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_permission_dialog_tall_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 580
expression: frame.text()
---
* bash ls -la /tmp/foo























────────────────────────────────────────────────────────────────────────────────
 bash: ls -la /tmp/foo
 List files in /tmp/foo

 Allow?
  1. allow once
  2. deny
  3. allow ls * for this session
  4. allow ls * in ~/cwd

  press tab to add a reason…
 ○ normal  permission pending                                             1:1 0%
