crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_permission_preserves_reasoning_context.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: text
---
│ I need to inspect the generated fixtures before choosing an implementation.
│
│ The temporary directory should reveal whether reusable outputs already
│ exist.

* bash ls -la /tmp/foo                                                 14:37:03




────────────────────────────────────────────────────────────────────────────────
 bash: ls -la /tmp/foo
 List files in /tmp/foo

 Allow?
  1. allow once
  2. deny
  3. allow ls * for this session
  4. allow ls * in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
