crates/tui/tests/storybook/snapshots/app_dialog_permission::bash_permission_reason_input_wraps.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 58 22
  0   0   1 fg=AnsiValue(208)
  0   1   5 attrs=dim
  0   7   2 fg=Rgb { r: 255, g: 255, b: 255 }
  0   9   4 fg=Rgb { r: 253, g: 151, b: 31 }
  0  13   9 fg=Rgb { r: 255, g: 255, b: 255 }
  0  47  10 attrs=dim
  9   0  58 fg=AnsiValue(208)
 10   1   4 fg=AnsiValue(208)
 11   1  22 attrs=dim
 13   1   6 attrs=dim
 14   0   1 bg=AnsiValue(237)
 14   1   4 bg=AnsiValue(237) attrs=dim
 14   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 14  15  43 bg=AnsiValue(237)
 15   1   4 attrs=dim
 16   1   4 attrs=dim
 17   1   4 attrs=dim
 20  56   1 fg=Black bg=White
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  38 bg=AnsiValue(233)
 21  48  10 fg=AnsiValue(244) bg=AnsiValue(233)
