crates/tui/tests/storybook/snapshots/app_dialog_permission::edit_file_long_path_permission_dialog_wraps.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 24
  8   0  70 fg=AnsiValue(208)
  9   1   9 fg=AnsiValue(208)
 12   0  70 fg=AnsiValue(244)
 13   1   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
 13   4   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
 13   6   6 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  12  56 bg=Rgb { r: 60, g: 20, b: 20 }
 14   1   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
 14   4   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
 14   6  14 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  20  48 bg=Rgb { r: 20, g: 50, b: 20 }
 15   0  70 fg=AnsiValue(244)
 16   1   6 attrs=dim
 17   0   1 bg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 17   2   3 bg=AnsiValue(237) attrs=dim
 17   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 17  15  55 bg=AnsiValue(237)
 18   1   4 attrs=dim
 19   1   4 attrs=dim
 20   1   4 attrs=dim
 22   2  26 attrs=dim
 23   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 23  10  54 bg=AnsiValue(233)
 23  64   6 fg=AnsiValue(244) bg=AnsiValue(233)
