crates/tui/tests/storybook/snapshots/app_dialog_permission::edit_file_permission_dialog_multiline_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---












────────────────────────────────────────────────────────────────────────────────
 edit_file: src/lib.rs
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
  1 - fn add(a: i32, b: i32) -> i32 {
  2 -     a + b
  1 + fn add(a: i64, b: i64) -> i64 {
  2 +     a.checked_add(b).expect("overflow")
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. yes
  2. no
  3. always allow
  4. always allow in ~/cwd

  press tab to add a reason…
 ○ normal                                                                 1:1 0%
