crates/tui/tests/storybook/snapshots/app_dialog_permission::edit_file_permission_dialog_with_diff.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 580
expression: frame.text()
---
* edit_file src/main.rs









────────────────────────────────────────────────────────────────────────────────
 edit_file: src/main.rs
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 1 - println!("hello, world");
 1 + println!("hello, smelt");
╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌
 Allow?
  1. allow once
  2. deny
  3. allow edit_file for this session
  4. allow edit_file in ~/cwd

  press tab to add a reason…
 ○ normal  permission pending                                             1:1 0%
