crates/tui/tests/storybook/snapshots/app_dialog_permission::edit_file_permission_dialog_with_diff.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 24
  0   0   1 fg=AnsiValue(208)
  0   1  10 attrs=dim
 10   0  80 fg=AnsiValue(208)
 11   1   9 fg=AnsiValue(208)
 12   0  80 fg=AnsiValue(244)
 13   0   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
 13   3   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
 13   5   9 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  14   8 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  22   5 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 110, g: 35, b: 35 }
 13  27   1 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  28   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
 13  30  49 bg=Rgb { r: 60, g: 20, b: 20 }
 14   0   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
 14   3   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
 14   5   9 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  14   8 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  22   5 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 35, g: 95, b: 35 }
 14  27   1 fg=Rgb { r: 230, g: 219, b: 116 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  28   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 14  30  49 bg=Rgb { r: 20, g: 50, b: 20 }
 15   0  80 fg=AnsiValue(244)
 16   1   6 attrs=dim
 17   0   1 bg=AnsiValue(237)
 17   1   1 fg=Black bg=White
 17   2   3 bg=AnsiValue(237) attrs=dim
 17   5  10 fg=AnsiValue(208) bg=AnsiValue(237)
 17  15  65 bg=AnsiValue(237)
 18   1   4 attrs=dim
 19   1   4 attrs=dim
 20   1   4 attrs=dim
 22   2  26 attrs=dim
 23   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 23  10  64 bg=AnsiValue(233)
 23  74   6 fg=AnsiValue(244) bg=AnsiValue(233)
